--- a/currenzy/package.json
+++ b/currenzy/package.json
@@ -7,11 +7,11 @@
   "scripts": {
     "build": "tsc",
     "test": "ts-node tests/index.test.ts",
-    "lint": "eslint src --fix && prettier --check src"
+    "lint": "eslint ./src --fix && prettier --check ./src"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/yourname/currenzy.git"
+    "url": "git+https://github.com/vahe-sargsyan2005/Currenzy"
   },
   "keywords": [
     "currency",
@@ -33,9 +33,12 @@
     "node-fetch": "^3.3.2"
   },
   "devDependencies": {
-    "eslint": "^8.0.0",
-    "prettier": "^3.0.0",
     "@types/node": "^22.7.6",
+    "@typescript-eslint/eslint-plugin": "^8.43.0",
+    "eslint": "^8.0.0",
+    "eslint-config-prettier": "^10.1.8",
+    "eslint-plugin-prettier": "^5.5.4",
+    "prettier": "^3.0.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
