--- a/currenzy/package.json
+++ b/currenzy/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "currenzy",
+  "name": "currenzy-lib",
   "version": "0.1.0",
   "description": "Universal currency rates & converter with providers (CBR, ECB, etc.)",
   "main": "dist/index.js",
