--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -14,12 +14,22 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
-      - run: npm ci
+
+      - name: Install dependencies
+        run: npm ci
         working-directory: ./currenzy
-      - run: npm test
+
+      - name: Run ESLint & Prettier
+        run: npm run lint
+        working-directory: ./currenzy
+
+      - name: Run Tests
+        run: npm test
         working-directory: ./currenzy
 
   publish-npm:
@@ -27,13 +37,19 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - uses: actions/setup-node@v4
+
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
         with:
           node-version: 20
           registry-url: https://registry.npmjs.org/
-      - run: npm ci
+
+      - name: Install dependencies
+        run: npm ci
         working-directory: ./currenzy
-      - run: npm publish
+
+      - name: Publish to npm
+        run: npm publish
         working-directory: ./currenzy
         env:
-          NODE_AUTH_TOKEN: ${{secrets.npm_token}}
+          NODE_AUTH_TOKEN: ${{ secrets.npm_token }}
