--- a/currenzy/package.json
+++ b/currenzy/package.json
@@ -1,7 +1,8 @@
 {
   "name": "currenzy-lib",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "description": "Universal currency rates & converter with providers (CBR, ECB, etc.)",
+  "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
