--- a/currenzy/tsconfig.json
+++ b/currenzy/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "target": "ES2020",
-    "module": "CommonJS",
+    "module": "ESNext",
     "moduleResolution": "Node",
     "declaration": true,
     "outDir": "dist",
