--- a/currenzy/package.json
+++ b/currenzy/package.json
@@ -1,13 +1,13 @@
 {
   "name": "currenzy-lib",
-  "version": "0.1.2",
+  "version": "0.1.3",
   "description": "Universal currency rates & converter with providers (CBR, ECB, etc.)",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
     "build": "tsc",
-    "test": "node --loader ts-node/esm -r tsconfig-paths/register tests/index.test.ts",
+    "test": "vitest",
     "lint": "eslint ./src --fix && prettier --check ./src"
   },
   "repository": {
@@ -29,7 +29,6 @@
   },
   "homepage": "https://github.com/yourname/currenzy#readme",
   "dependencies": {
-    "chalk": "^5.6.2",
     "fast-xml-parser": "^4.4.0",
     "node-fetch": "^3.3.2"
   },
@@ -38,11 +37,9 @@
     "@typescript-eslint/eslint-plugin": "^8.43.0",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^10.1.8",
-    "eslint-import-resolver-typescript": "^4.4.4",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.0.0",
-    "ts-node": "^10.9.2",
-    "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.6.3"
+    "typescript": "^5.6.3",
+    "vitest": "^3.2.4"
   }
 }
