--- a/.github/workflows/currenzy-npm-publish.yml
+++ b/.github/workflows/currenzy-npm-publish.yml
@@ -48,6 +48,10 @@ jobs:
         run: npm ci
         working-directory: ./currenzy
 
+      - name: Build package
+        run: npm run build
+        working-directory: ./currenzy
+
       - name: Publish to npm
         run: npm publish
         working-directory: ./currenzy
