--- a/currenzy/package.json
+++ b/currenzy/package.json
@@ -1,14 +1,13 @@
 {
   "name": "currenzy-lib",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Universal currency rates & converter with providers (CBR, ECB, etc.)",
   "type": "module",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "tsc",
+    "build": "vite build",
     "test": "vitest",
-    "prepublishOnly": "npm run build",
     "lint": "eslint ./src --fix && prettier --check ./src"
   },
   "repository": {
@@ -34,7 +33,8 @@
   "homepage": "https://github.com/yourname/currenzy#readme",
   "dependencies": {
     "fast-xml-parser": "^4.4.0",
-    "ofetch": "^1.4.1"
+    "ofetch": "^1.4.1",
+    "vite-tsconfig-paths": "^5.1.4"
   },
   "devDependencies": {
     "@types/node": "^22.7.6",
