--- a/currenzy/package.json
+++ b/currenzy/package.json
@@ -1,12 +1,13 @@
 {
   "name": "currenzy-lib",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "description": "Universal currency rates & converter with providers (CBR, ECB, etc.)",
   "type": "module",
-  "main": "dist/index.js",
+  "main": "dist/index.cjs",
+  "module": "dist/index.js",
   "types": "dist/index.d.ts",
   "scripts": {
-    "build": "vite build",
+    "build": "tsup",
     "test": "vitest",
     "lint": "eslint ./src --fix && prettier --check ./src"
   },
@@ -43,6 +44,7 @@
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.0.0",
+    "tsup": "^8.5.0",
     "typescript": "^5.6.3",
     "vitest": "^3.2.4"
   }
