--- a/currenzy/package.json
+++ b/currenzy/package.json
@@ -1,11 +1,12 @@
 {
   "name": "currenzy-lib",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "description": "Universal currency rates & converter with providers (CBR, ECB, etc.)",
   "type": "module",
-  "main": "dist/index.cjs",
-  "module": "dist/index.js",
-  "types": "dist/index.d.ts",
+  "main": "dist/index.js",
+  "module": "dist/index.cjs",
+  "browser": "dist/index.global.js",
+  "typings": "./dist/index.d.ts",
   "scripts": {
     "build": "tsup",
     "test": "vitest",
@@ -26,7 +27,7 @@
     "converter",
     "currenzy"
   ],
-  "author": "Vahe w33bv.gl@gmail.com",
+  "author": "Vahe Sargsyan",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/yourname/currenzy/issues"
@@ -34,8 +35,7 @@
   "homepage": "https://github.com/yourname/currenzy#readme",
   "dependencies": {
     "fast-xml-parser": "^4.4.0",
-    "ofetch": "^1.4.1",
-    "vite-tsconfig-paths": "^5.1.4"
+    "ofetch": "^1.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.7.6",
@@ -45,7 +45,7 @@
     "eslint-plugin-prettier": "^5.5.4",
     "prettier": "^3.0.0",
     "tsup": "^8.5.0",
-    "typescript": "^5.6.3",
+    "typescript": "^5.9.2",
     "vitest": "^3.2.4"
   }
 }
