--- a/currenzy/tsconfig.json
+++ b/currenzy/tsconfig.json
@@ -12,9 +12,7 @@
     "forceConsistentCasingInFileNames": true,
     "skipLibCheck": true,
     "resolveJsonModule": true,
-    "allowSyntheticDefaultImports": true,
-    "declarationDir": "dist",
-    "emitDeclarationOnly": true
+    "allowSyntheticDefaultImports": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "dist"]
