--- a/currenzy/package.json
+++ b/currenzy/package.json
@@ -6,7 +6,7 @@
   "main": "dist/index.js",
   "module": "dist/index.cjs",
   "browser": "dist/index.global.js",
-  "typings": "./dist/index.d.ts",
+  "typings": "dist/index.d.ts",
   "scripts": {
     "build": "tsup",
     "test": "vitest",
