--- a/currenzy/tsconfig.json
+++ b/currenzy/tsconfig.json
@@ -1,7 +1,10 @@
 {
   "compilerOptions": {
     "baseUrl": ".",
-    "paths": { "@src/*": ["src/*"] },
+    "paths": {
+      "@src": ["src"],
+      "@src/*": ["src/*"]
+    },
     "target": "ES2020",
     "module": "ESNext",
     "moduleResolution": "Node",
