--- a/currenzy/package.json
+++ b/currenzy/package.json
@@ -1,6 +1,6 @@
 {
   "name": "currenzy-lib",
-  "version": "0.5.0",
+  "version": "0.7.0",
   "description": "Free, open-source library for fetching, managing, and converting up-to-date currency rates from multiple reliable sources with the ability to easily choose the source.",
   "type": "module",
   "main": "dist/index.js",
@@ -29,9 +29,9 @@
   "author": "Vahe Sargsyan",
   "license": "MIT",
   "bugs": {
-    "url": "https://github.com/yourname/currenzy/issues"
+    "url": "https://github.com/vahe-sargsyan2005/Currenzy/issues"
   },
-  "homepage": "https://github.com/yourname/currenzy#readme",
+  "homepage": "https://github.com/vahe-sargsyan2005/Currenzy/blob/main/README.md",
   "dependencies": {
     "fast-xml-parser": "^4.4.0",
     "ofetch": "^1.4.1"
