--- a/package.json
+++ b/package.json
@@ -21,10 +21,20 @@
   "keywords": [
     "currency",
     "exchange-rates",
+    "money",
+    "converter",
+    "finance",
+    "currzy",
+    "currency-converter",
+    "currency-api",
     "cbrf",
     "ecb",
-    "converter",
-    "currzy"
+    "money-exchange",
+    "financial",
+    "rates",
+    "monetary",
+    "currency-rates",
+    "exchange"
   ],
   "author": "Vahe Sargsyan",
   "license": "MIT",
